<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.syz_7.parqueoscz.Permisos">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="568dp"
        android:background="@android:drawable/alert_light_frame"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            tools:layout_editor_absoluteY="351dp">

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/permisos_user"
                android:inputType="textPersonName"
                android:textAlignment="center"
                tools:layout_editor_absoluteX="84dp"
                tools:layout_editor_absoluteY="146dp" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/permisos_pàss"
                android:inputType="textPassword"
                android:textAlignment="center"
                tools:layout_editor_absoluteX="84dp"
                tools:layout_editor_absoluteY="203dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:onClick="entrar"
                android:text="@string/permisos_entrar"
                android:textAlignment="center"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="163dp"
                tools:layout_editor_absoluteY="275dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="20dp"
                android:background="@android:color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="50"

                android:onClick="registrar"
                android:text="@string/permisos_registrar"
                android:textAlignment="center"
                android:textSize="24sp" />
        </LinearLayout>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
